platform/gcp/fluent-bit/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fluent-bit-metrics
  labels:
    app: fluent-bit
    area: logging
    component: metrics
    platform: gcp
spec:
  selector:
    app: fluent-bit
  ports:
    - name: metrics
      port: 2020
      targetPort: metrics
      protocol: TCP
