platform/gcp/fluent-bit/webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fluent-bit-webhook
  labels:
    app: fluent-bit
    area: logging
    component: webhook
    platform: gcp
spec:
  selector:
    app: fluent-bit
  ports:
    - name: webhook
      port: 9880
      targetPort: webhook
      protocol: TCP
