platform/gcp/fluent-bit/allow-prometheus-scrape.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-scrape-fluent-bit
  labels:
    app: fluent-bit
    area: logging
    component: metrics
    platform: gcp
spec:
  podSelector:
    matchLabels:
      app: fluent-bit
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app: prometheus
      ports:
        - protocol: TCP
          port: 2020
